--- a/Tallas_SeaUrchin_2023.Rmd
+++ b/Tallas_SeaUrchin_2023.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Pesquería Erizo X y XI Regiones "
-subtitle: "Análisis Exploratorio Datos Tallas Seguimiento Bentónico 1996-2022"
+subtitle: "Análisis Exploratorio Datos Tallas Seguimiento Bentónico 1996-2023"
 author: "Mauricio Mardones. Inv. Depto Ev. Recursos. IFOP"
 date:  "`r format(Sys.time(), '%d %B, %Y')`"
 toc: true
@@ -14,7 +14,7 @@ format:
     self-contained: true
     embed-resources: true
     code-tools: true
-#bibliography: reineta.bib
+#bibliography: biblio.bib
 #csl: apa.csl
 #link-citations: yes
 #linkcolor: blue
@@ -76,6 +76,30 @@ Los datos se actualizan año a año y se van estructurando las estructuras de ta
 ta9622 <- read.table("Tallas_96_22.csv",sep=",", header = T)
 names(ta9622)
 dim(ta9622)
+# leo la base de tallas
+ta23 <- read_excel("BD_Erizo_2023.xlsx", 
+    sheet = "Tallas")
+```
+
+
+Selecciono las columnas en función de `ta96_22`
+```{r}
+ta23b <- ta23 %>% 
+  dplyr::select(c("REGION",
+                  "PUERTO" ,
+                  "ANO_ARR",
+                  "MES_ARR" ,
+                  "DIA_ARR" ,
+                  "FUNCION" ,
+                  "PROCED"  ,
+                  "CAPTURA"  ,
+                  "DESTINO" ,
+                  "PESO_M"  ,
+                  "LONGITUD",
+                   "FRECUENCIA")) 
+ta9622b <- ta9622 %>% 
+  dplyr::select(-1)
+ta9623 <- rbind(ta9622b, ta23b)
 ```
 
 
@@ -86,43 +110,32 @@ pro <- read.csv2("M_Procedencias.csv", header =T, sep=";")
 proifop <- read.csv2("M_Procedencias_Poligonos.csv", header =T, sep=",")
 names(pro)
 names(proifop)
-policru<- subset(proifop, select=c(4,5, 21))
+policru<- subset(proifop, select=c(4,5,19, 20,  21))
 names(policru)
-colnames(policru)<- c("PROCED", "POLIGONO", "POLIGONO_IFOP")
+colnames(policru)<- c("PROCED", "POLIGONO", "POLIGONO_IFOP", "LAT" , "LON")
 names(policru)
 
-tageo9622 <- merge(policru, ta9622, by="PROCED")
+tageo9623 <- merge(policru, ta9623, by="PROCED")
 ```
 
 Identifico los registros por año para comprobar lo del 2022
 
 ```{r}
-table(tageo9622$ANO_ARR)
+table(tageo9623$ANO_ARR)
 ```
 
 
-## Exploraciòn Datos Talla del 2020
 
-Una vez he generado la base completa, comienzo a explorar los datos de tallas del 2020.
-
-```{r}
-talla2022 <- tageo9622 %>% 
-  filter(ANO_ARR >= 2000)
-
-#identifico la cantidad de registros
-dim(talla2022)
-
-```
 
 ```{r}
 # Comandos para crear nueva columna de zona  en funcion de los poligonos
 
-talla2022$ZONA[talla2022$POLIGONO %in% c(1,2)] <-1
-talla2022$ZONA[talla2022$POLIGONO %in% c(4,5,6,13)] <-2
-talla2022$ZONA[talla2022$POLIGONO %in% c(7,8,9,10,11,12)] <-3
+tageo9623$ZONA[tageo9623$POLIGONO %in% c(1,2)] <-1
+tageo9623$ZONA[tageo9623$POLIGONO %in% c(4,5,6,13)] <-2
+tageo9623$ZONA[tageo9623$POLIGONO %in% c(7,8,9,10,11,12)] <-3
 
-talla2022$ZONA<- as.factor(talla2022$ZONA)
-class(talla2022$ZONA)
+tageo9623$ZONA<- as.factor(tageo9623$ZONA)
+class(tageo9623$ZONA)
 ```
 
 
@@ -130,7 +143,7 @@ Lo primero es ver diferencias entre destinos
 
 El data frame que corresponde usar es el de *"talla2020"*
 ```{r fig.cap="Diferencia entre tallas y destino (Fresco e Industria)"}
-p <- ggplot(talla2022, aes(x=LONGITUD, group=DESTINO, fill= DESTINO)) +
+p <- ggplot(tageo9623, aes(x=LONGITUD, group=DESTINO, fill= DESTINO)) +
     geom_density( alpha=0.4, show.legend = FALSE)+
     facet_wrap(.~ANO_ARR, scales = "free_y", ncol=5) +
     geom_vline(xintercept = 65, color = "red")+
@@ -141,159 +154,8 @@ p
 
 ```
 
-```{r}
-p2 <- ggplot(talla2022, aes(x=LONGITUD, fill=DESTINO, group=DESTINO)) +
-    geom_histogram(position = "identity",alpha=0.3, show.legend = F) +
-    facet_wrap(.~ANO_ARR, ncol=5, scales = "free_y") +
-    #scale_fill_brewer(palette="Dark2")+
-    theme_bw() +
-    ylab("Frecuencia Absoluta")+
-    xlab("Longitud (mm.)")+
-    ggtitle("Tallas de erizo Destino Fresco e industria")+
-    geom_vline(xintercept = 65, color = "red")+
-    geom_vline(xintercept = 70, color = "blue")+
-    labs(fill="")
-p2
-```
-
-Tallas destino Fresco
-
-```{r fig.align="center"}
-M <- ggplot(talla2022 %>% 
-              filter(DESTINO==2), aes(LONGITUD)) +
-  geom_histogram(binwidth = 3,  color="grey",  alpha=0.4, fill="red", show.legend = FALSE) +
-  facet_wrap(.~ANO_ARR, ncol=5) +
-  xlim(40,150)+
-     
-  ggtitle("Tallas de erizo Destino Fresco")+
-  geom_vline(xintercept = 65, color = "red")+
-  geom_vline(xintercept = 70, color = "blue")
-M
-```
-Tallas destino Industria
-
-```{r fig.align="center", warning=F, message=F, fig.height=10}
-M <- ggplot(talla2022 %>% 
-              filter(DESTINO==1), aes(LONGITUD)) +
-  geom_histogram(binwidth = 3,  color="grey",  alpha=0.4, fill="#225ea8", show.legend = FALSE) +
-  facet_wrap(.~ANO_ARR, ncol=5) +
-  xlim(40,150)+
-  scale_x_continuous(breaks = seq(from = 40, to = 150, by = 10))+
-  theme_bw()+
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))+
-  ggtitle("Tallas de erizo Destino Industria")+
-  geom_vline(xintercept = 65, color = "red")+
-  geom_vline(xintercept = 70, color = "blue")
-M
-```
-
-
-
-Estructura de tallas por año y por Zona
-```{r fig.align="center", message=F, warning=F}
-jz3 <- ggplot(talla2022 %>% 
-                drop_na(), aes(x=LONGITUD, y = as.factor(ANO_ARR), 
-                      fill = factor(stat(quantile))))+
-  stat_density_ridges(
-    geom = "density_ridges_gradient",
-    calc_ecdf = TRUE,
-    quantiles = c(0.10, 0.90)) +
-  scale_fill_manual(
-    name = "Probabilidad", values = c("#de2d26", "#fee0d2", "#de2d26"),
-    labels = c("[0, 0.10]", "[0.10, 0.90]", "[0.90, 1]"))+
-  facet_wrap(.~ZONA, ncol=3) +   
-  geom_vline(xintercept = 65, color = "red")+
-  scale_x_continuous(breaks = seq(from = 40, to = 120, by = 10))+
-  scale_y_discrete(breaks = seq(from = 1996, to = 2022, by = 1))+
-  #scale_fill_viridis_d(name="SubArea")+
-  theme_bw()+
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))+
-  xlim(40,120)+
-  xlab("Longitud (cm.)")+
-  ylab("")
-jz3
-
-```
-
-Estructura de tallas por año y por Poligono de IFOP
-```{r fig.align="center", message=F, warning=F}
-jz3 <- ggplot(talla2022 %>% 
-                drop_na(), aes(x=LONGITUD, y = as.factor(ANO_ARR), 
-                      fill = factor(stat(quantile))))+
-  stat_density_ridges(
-    geom = "density_ridges_gradient",
-    calc_ecdf = TRUE,
-    quantiles = 2, 
-    scale = 2,
-    rel_min_height = 0.1,
-    alpha=0.3) +
-  scale_fill_viridis_d(option = "D",
-                       name = "50%")+
-  facet_wrap(.~POLIGONO, ncol=4) +   
-  geom_vline(xintercept = 65, color = "red")+
-  scale_x_continuous(breaks = seq(from = 1, to = 150, by = 10))+
-  scale_y_discrete(breaks = seq(from = 1996, to = 2022, by = 1))+
-  #scale_fill_viridis_d(name="SubArea")+
-  theme_bw()+
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))+
-  xlim(20,150)+
-  xlab("Longitud (cm.)")+
-  ylab("")
-jz3
-```
-Poligono Molinet
-
-```{r}
-jz <- ggplot(talla2022 %>% 
-                drop_na(), aes(x=LONGITUD, 
-                               y = as.factor(ANO_ARR),
-                               fill=ZONA))+
-  #geom_joy(alpha=0.9) +
-  geom_density_ridges(stat = "binline", bins = 30, 
-                      scale = 1, draw_baseline = FALSE)+
-  facet_wrap(.~POLIGONO, ncol=11) +   
-  geom_vline(xintercept = 65, color = "red")+
-  scale_x_continuous(breaks = seq(from = 1, to = 10, by = 1))+
-  scale_y_discrete(breaks = seq(from = 2000, to = 2022, by = 1))+
-  scale_fill_bluebrown_d(name="SubArea",
-                         labels = c("X NORTE", "X SUR", "XI"))+
-  theme_bw()+
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))+
-  xlim(20,140)+
-  xlab("Longitud (cm.)")+
-  ylab("")
-jz
-
-```
-Poligono IFOP
-
-```{r}
-jzif <- ggplot(talla2022 %>% 
-                drop_na(), aes(x=LONGITUD, 
-                               y = as.factor(ANO_ARR),
-                               fill=ZONA))+
-  #geom_joy(alpha=0.9) +
-  geom_density_ridges(stat = "binline", bins = 30, 
-                      scale = 1, draw_baseline = FALSE)+
-  facet_wrap(.~POLIGONO_IFOP, ncol=11) +   
-  geom_vline(xintercept = 65, color = "red")+
-  #scale_x_continuous(breaks = seq(from = 1, to = 10, by = 1))+
-  scale_y_discrete(breaks = seq(from = 2000, to = 2022, by = 1))+
-  scale_fill_brewer(palette = 2,
-                         name="SubArea",
-                         labels = c("X NORTE", "X SUR", "XI"))+
-  theme_bw()+
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))+
-  xlim(20,140)+
-  xlab("Longitud (cm.)")+
-  ylab("")
-jzif
-
-```
-
-
 ```{r, fig.align="center"}
-meant <-talla2022 %>% 
+meant <-tageo9623 %>% 
   dplyr::group_by(ANO_ARR, 
            ZONA) %>%
   dplyr::summarise(avg=mean(LONGITUD))
@@ -308,7 +170,7 @@ pmea <- ggplot(meant %>%
     stat_smooth(method= "gam", colour='#253494')+
     theme_bw()+ 
     facet_wrap(.~ZONA)+
-    scale_x_continuous(breaks = seq(from = 2000, to = 2022, by = 2))+
+    scale_x_continuous(breaks = seq(from = 1996, to = 2022, by = 2))+
     #scale_y_discrete(breaks = seq(from = 1, to = 13, by = 1))+
     theme(axis.text.x = element_text(angle = 90, hjust = 2))+
     guides(fill = guide_legend(reverse=F))+
@@ -321,22 +183,15 @@ pmea <- ggplot(meant %>%
 pmea
 ```
 
+## Expansión de tallas para todos los registros. 
+
 Ahora se genera la expansion de tallas a la frecuecnia para obtener los vectores por año y por zona
 
 ```{r}
-names(ta9622)
-dftalla3<-subset(ta9622,select=c(4,8, 12, 13))
-names(dftalla3)
-dim(dftalla3)
-colnames(dftalla3) <- c( "ANO"  ,   "PROC",     "TALLA",    "FRECUENCIA")
-
-dftalla3 <- transform(dftalla3, TALLA = as.numeric(TALLA), 
-               FRECUENCIA = as.numeric(FRECUENCIA))
-dftalla3 <- na.omit(dftalla3)
-dim(dftalla3)
-head(dftalla3)
-#ver tallas grandes
-# hist y max
+tageo9623b <- tageo9623 %>% 
+  drop_na() %>% 
+  type.convert(as.is = TRUE) %>% 
+  uncount(FRECUENCIA)
 ```
 
 
@@ -344,38 +199,9 @@ Identifico las procedencias de la base
 
 ```{r}
 #table(dftalla4$PROC)
-unique(dftalla3$PROC)
+unique(tageo9623b$PROC)
 ```
 
-\pagebreak
-
-## Expansión de tallas para todos los registros. Esto demora un poco
-
-ahora una expansión de las tallas
-
-```{r}
-#expandir long a fracuencias
-#esto no lo pude hacer para el total dado q es mucha data
-expanav<-dftalla3
-#puerto, ano, long, Frec
-head(expanav)
-
-filas<-nrow(expanav)
-
-aux<-list();auxA<-list();auxB<-list()
-for(i in 1:filas){
-  aux[[i]]<-rep(expanav[i,3],expanav[i,4])
-  auxA[[i]]<-rep(expanav[i,2],expanav[i,4])
-  auxB[[i]]<-rep(expanav[i,1],expanav[i,4])
-  
-}
-
-
-length(aux)
-length(auxA)
-length(auxB)
-#aux<-as.numeric(aux)
-```
 
 
 ```{r}
@@ -500,17 +326,18 @@ Un plot a traves de los años de las estructuras de tallas con la linea roja de 
 ### Zona X Norte
 
 ```{r eval=FALSE}
-tallaxnorte <- dftalla5 %>% 
+tallaxnorte <- tageo9623b %>% 
   filter(POLIGONO==1 | POLIGONO ==2)  %>% 
-  filter(Year==2022)
-tallaxnorte$cat_long <- as.numeric(as.character(cut(x = tallaxnorte$Long, breaks = seq(40,138,2), 
+  filter(ANO_ARR==2023)
+tallaxnorte$cat_long <- as.numeric(as.character(cut(x = tallaxnorte$LONGITUD, 
+                                                    breaks = seq(40,138,2), 
                                                   labels = seq(40,136,2), right = FALSE)))
-ttn <- table(tallaxnorte$Year, tallaxnorte$cat_long)
+ttn <- table(tallaxnorte$ANO_ARR, tallaxnorte$cat_long)
 
 tail(ttn, 10)
 
 # A su vez puedo generar el archivo por separado
-write.csv(ttn, "tallanorte22.csv", sep = ",", row.names = TRUE)
+#write.csv(ttn, "tallanorte22.csv", sep = ",", row.names = TRUE)
 
 ```
 
@@ -670,11 +497,11 @@ Otra forma
 
 
 
-inderec <- talla2022exp %>% 
+inderec <- tageo9623exp %>% 
   drop_na(LONGITUD) %>% 
   dplyr::group_by(ANO_ARR, MES_ARR, POLIGONO, ZONA, POLIGONO_IFOP) %>% 
   dplyr::mutate(PROP = LONGITUD < 30) %>%
-  summarize(PROP = n() / nrow(talla2022exp)*100) %>% 
+  summarize(PROP = n() / nrow(tageo9623exp)*100) %>% 
   mutate(INDEX= ifelse(PROP < 0.1, -1 * inderec$INDEX2))
 
 inderec$INDEX2 <- ifelse(inderec$INDEX == "negative", -1 * inderec$INDEX2, inderec$INDEX2)
@@ -713,7 +540,7 @@ indexplot
 
 
 ```{r}
-inderec2 <- talla2022exp %>% 
+inderec2 <- tageo9623exp %>% 
   dplyr::group_by(ANO_ARR, MES_ARR, POLIGONO, ZONA, POLIGONO_IFOP) %>% 
   summarize(REC = sum(LONGITUD < 70),
             PROPREC = mean(LONGITUD < 70))
@@ -722,7 +549,7 @@ inderec2 <- talla2022exp %>%
 
 
 # Calculamos la cantidad de individuos menores a 30 mm por grupo
-df <- talla2022exp %>%
+df <- tageo9623exp %>%
   group_by(ANO_ARR, MES_ARR, POLIGONO, ZONA, POLIGONO_IFOP) %>%
   mutate(cantidad_menores = ifelse(LONGITUD <= 46, 1, 0)) %>%
   summarise(cantidad_menores = sum(cantidad_menores))
